# HrdDataCacheSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CacheSystem/: AbstractCachedFunction.h  CMakeLists.txt  CacheConfiguration.cpp  CacheConfiguration.h  CacheData.h  CacheDataStructure.cpp  CacheDataStructure.h  CachePolicy.h  CachedFunction.h  CachedFunctionDeclaration.h  CachedFunctionManager.cpp  CachedFunctionManager.h  CachedFunctionParent.h  DataManipulationFunctionsTypeTraits.h  DefaultCachePolicy.cpp  Hash.h  LFUCachePolicy.cpp  LFUCachePolicy.h  ReturnType.h  StandardDestroyFunctions.h  StandardEqualFunctions.cpp  StandardEqualFunctions.h  StandardFunctions.h  StandardGetSizeFunctions.cpp  StandardGetSizeFunctions.h  StandardHashFunctions.cpp  StandardHashFunctions.h  StandardInitFunctions.cpp  StandardInitFunctions.h  StandardOutputFunctions.cpp  StandardOutputFunctions.h  StandardReturnFunctions.h  TypedParameterInfo.h  TypedReturnInfo.h  TypedValue.h
CacheSystem/CacheSystem/: AbstractCachedFunction.h  CacheConfiguration.cpp  CacheConfiguration.h  CacheData.cpp  CacheData.h  CacheDataStructure.cpp  CacheDataStructure.h  CacheManagerConfiguration.h  CachePolicy.cpp  CachePolicy.h  CacheSystem.cpp  CacheSystem.vcxproj  CacheSystem.vcxproj.filters  CachedFunction.h  CachedFunctionDeclaration.h  CachedFunctionManager.cpp  CachedFunctionManager.h  CachedFunctionParent.h  DefaultCachePolicy.cpp  DefaultCachePolicy.h  ParameterInfo.h  ParameterType.h  ReturnInfo.h  ReturnType.h  StandardDestroyFunctions.h  StandardEqualFunctions.cpp  StandardEqualFunctions.h  StandardHashFunctions.cpp  StandardHashFunctions.h  StandardInitFunctions.h  StandardOutputFunctions.cpp  StandardOutputFunctions.h  StandardReturnFunctions.h  TypedParameterInfo.h  TypedReturnInfo.h  TypedValue.h  Value.h
CacheSystemVtkWrapper/: CMakeLists.txt  CacheManagerSource.cpp  CacheManagerSource.h  CacheUtils.cpp  CacheUtils.h  CachingFilter.h
LHPApps/: CMakeLists.txt  lhpDefines.h.in
LHPApps/CMakeInput/: LHPConfig.cmake.in  LHPUse.cmake.in  lhpDefines.h.in  vtkLHPConfigure.h.in
LHPApps/CMakeModules/: FindC3DReaderAPI.cmake  FindCppUnit.cmake  FindMAF.cmake  FindMED.cmake  LHPConfigMacro.cmake
LHPApps/Cache/: AbstractCachedFunction.h  CMakeLists.txt  Cache.cpp  Cache.h  CacheConfiguration.h  CacheData.cpp  CacheData.h  CacheDataStructure.h  CacheManagerConfiguration.h  CachePolicy.cpp  CachePolicy.h  CachedFunction.h  CachedFunctionManager.cpp  CachedFunctionParent.h  DefaultCachePolicy.cpp  DefaultCachePolicy.h  LFUCachePolicy.cpp  ParameterInfo.h  ParameterType.h  StandardEqualFunctions.h  StandardGetSizeFunctions.h  StandardHashFunctions.cpp  StandardInitFunctions.cpp  StandardInitFunctions.h  TypedReturnInfo.h
LHPApps/Common/: CMakeLists.txt  VecProc.h  forarray.h  lhpCommonDefines.h.in  lhpInteractorPERBrushFeedback.cpp  lhpInteractorPERBrushFeedback.h  lhpInteractorPERScalarInformation.cpp  lhpInteractorPERScalarInformation.h  lhpInteractorPicker.cpp  lhpInteractorPicker.h  lhpUtils.cpp  lhpUtils.h  mafPlotMath.cpp  mafPlotMath.h  splines.h  vectors.h
LHPApps/Core/: CMakeLists.txt  lhpCoreDefines.h.in  lhpFactoryTagHandler.cpp  lhpFactoryTagHandler.h  lhpUser.cpp  lhpUser.h
LHPApps/Gui/: CMakeLists.txt  lhpGUIHistogramWidget.cpp  lhpGUIHistogramWidget.h  lhpGUINetworkConnectionSettings.cpp  lhpGUINetworkConnectionSettings.h  lhpGUIOpenSimSettings.cpp  lhpGUIOpenSimSettings.h  lhpGUIPythonSettings.cpp  lhpGUIPythonSettings.h  lhpGUISettingsOpUploadMultiVMERefactor.cpp  lhpGUISettingsOpUploadMultiVMERefactor.h  lhpGuiDefines.h.in  psLoaderGUIContextualMenu.cpp  psLoaderGUIContextualMenu.h
LHPApps/Operations/: CMakeLists.txt  lhpComputeTensor.cpp  lhpComputeTensor.h  lhpCooccurrenceMatrixFilter.cpp  lhpCooccurrenceMatrixFilter.h  lhpFactoryTagHandler.cpp  lhpFactoryTagHandler.h  lhpFrameVolumeBrush.cpp  lhpFrameVolumeBrush.h  lhpGizmoVolumeBrush.cpp  lhpGizmoVolumeBrush.h  lhpGuiDialogCreateOpenSimModelWorkflow.cpp  lhpGuiDialogCreateOpenSimModelWorkflow.h  lhpHistogram1D.cpp  lhpHistogram1D.h  lhpHistogramEqualizationFilter.cpp  lhpHistogramEqualizationFilter.h  lhpInteractorExtractLandmarkEOS.cpp  lhpInteractorExtractLandmarkEOS.h  lhpInteractorVolumeBrush.cpp  lhpInteractorVolumeBrush.h  lhpIsotropicSampleTable.cpp  lhpIsotropicSampleTable.h  lhpMeshFeBioReader.cpp  lhpMeshFeBioReader.h  lhpMeshFeBioWriter.cpp  lhpMeshFeBioWriter.h  lhpMultiscaleActor.cpp  lhpMultiscaleActor.h  lhpMultiscaleActorCoordsUtility.cpp  lhpMultiscaleActorCoordsUtility.h  lhpMultiscaleCallbacks.cpp  lhpMultiscaleCallbacks.h  lhpMultiscaleCameraParams.cpp  lhpMultiscaleCameraParams.h  lhpMultiscaleCameraUtility.cpp  lhpMultiscaleCameraUtility.h  lhpMultiscaleUtility.cpp  lhpMultiscaleUtility.h  lhpMultiscaleVectorMath.cpp  (+239 more)
LHPApps/VME/: CMakeLists.txt  lhpOpSetLowerRes.cpp  lhpOpSetLowerRes.h  lhpPipeAnalogGraphXY.cpp  lhpPipeAnalogGraphXY.h  lhpPipeMeshFake.cpp  lhpPipeMeshFake.h  lhpPipeSurfacePlot.cpp  lhpPipeSurfacePlot.h  lhpPipeVolumeBrushSlice.cpp  lhpPipeVolumeBrushSlice.h  lhpVMEDefines.h.in  lhpVMEPoseGroup.cpp  lhpVMEPoseGroup.h  lhpVMEScalarMatrix.cpp  lhpVMEScalarMatrix.h  lhpVMESurfaceScalarVarying.cpp  lhpVMESurfaceScalarVarying.h  lhpVisualPipeSurfaceScalar.cpp  lhpVisualPipeSurfaceScalar.h  mafJointAnalysis.cpp  mafJointAnalysis.h  mafPipeIntGraph.cpp  mafPipeIntGraph.h  mafVMEAFRefSys.cpp  mafVMEAFRefSys.h  mafVMEC3DData.cpp  mafVMEC3DData.h  mafVMEHelAxis.cpp  mafVMEHelAxis.h  mafVMEShortcut.cpp  mafVMEShortcut.h  mafVMEShortcut.xpm  medMSMGraph.cpp  medMSMGraph.h  medPipeJoint.cpp  medPipeJoint.h  medVMEJoint.cpp  medVMEJoint.h  medVMEJoint.xpm  (+15 more)
LHPApps/Views/: CMakeLists.txt  lhpViewAnalogGraphXY.cpp  lhpViewAnalogGraphXY.h  lhpViewArbitrarySlice.cpp  lhpViewArbitrarySlice.h  lhpViewOrthoSlice.cpp  lhpViewOrthoSlice.h  lhpViewSurfacePlot.cpp  lhpViewSurfacePlot.h  mafGraphIDDesc.cpp  mafGraphIDDesc.h  mafMemGraph.cpp  mafMemGraph.h  mafStringSet.cpp  mafStringSet.h  mafViewIntGraph.cpp  mafViewIntGraph.h  mafViewIntGraphWindow.cpp  mafViewIntGraphWindow.h
LHPApps/qa/: CMakeLists.txt
(+154 files in other folders)
